--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -683,6 +683,7 @@ footer .mkd-footer-top-holder {
     border: none;
     color: #fff;
     font-weight: bold;
+    cursor: pointer;
 }
 .fsporange_btn input{
     background: #f69c4a;
@@ -690,6 +691,7 @@ footer .mkd-footer-top-holder {
     border: none;
     color: #fff;
     font-weight: bold;
+    cursor: pointer;
 }
 .fsp-page-container{
     background: #ffffff;
@@ -791,13 +793,50 @@ footer .mkd-footer-top-holder {
 .ctg_list img{
     width: 100%;
 }
-
-@media only screen and (max-width: 1200px) {
+.saved-articles-container ul{
+    margin-bottom: 0;
+}
+.saved-articles-container .fsporange_btn input{
+        padding: 10px 25px;
+        float: right;
+}
+@media screen and (max-width: 1200px) and (min-width: 992px){
+    .user-profile-resize{
+        width:100% !important;
+    }
+    .fsp-saved-articles{
+        padding-top: 20px;
+    }
+    .saved_art_cont{
+        width: 70%;
+    }
+    .saved_art_cont_btns {
+    padding: 3% 2.5% 0 0;
+}
+}
+@media only screen and (max-width: 1024px) {
+     .saved_art_cont{
+        width: 60%;
+    }
+    .user-profile-rgtinfo{
+        padding: 0px;
+    }
+     .fsp-saved-articles{
+        padding-top: 30px;
+    }
+}
+@media only screen and (max-width: 767px) {
+    
+     .saved_art_cont{
+        width: 56%;
+    }
+}
+@media only screen and (max-width: 610px) {
     .fsp-page-container {
         padding: 40px 30px 0;
     }
     .user-profile-rgtinfo {
-        padding: 10% 0;
+        padding: 10% 0 0;
     }
     .saved_art_img {
         float: none;
@@ -822,6 +861,11 @@ footer .mkd-footer-top-holder {
         float: none;
         display: inline-block;
     }
+    .saved-articles-container .fsporange_btn input{
+       float:none;
+       margin: 0 auto 30px;
+       display: block;
+}
 }
 @media only screen and (max-width: 600px) {
     .followed_ctg_content ul li{
