--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -1002,7 +1002,8 @@ aside.mkd-sidebar .mkd-section-title-holder .mkd-st-title, .wpb_widgetised_colum
 /*single article page styles starts here*/
 .mdk-sng-pst p{
     padding:10px 0;
-    font-size: 16px !important;
+    font-size: 16pt !important;
+    line-height: 30px !important;
 }
 .mdk-sng-pst p img{
     float:left;
