--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -602,6 +602,10 @@ footer .mkd-footer-top-holder {
     color: red ;
     font-size: 13px;
 }
+.register_error{
+    color: red;
+    font-size: 14px;
+}
 #no_comments_description {
     color: #121212;
 }
@@ -1225,3 +1229,4 @@ table.ai1ec-month-view {
     font-size: 16px;
     margin-top: 10px;
 }
+
