--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -1006,8 +1006,8 @@ aside.mkd-sidebar .mkd-section-title-holder .mkd-st-title, .wpb_widgetised_colum
 /*single article page styles starts here*/
 .mdk-sng-pst p{
     padding:10px 0;
-    font-size: 16pt !important;
-    line-height: 30px !important;
+    font-size: 15pt !important;
+    line-height: 29px !important;
 }
 .mdk-sng-pst p img{
     float:left;
@@ -1230,3 +1230,17 @@ table.ai1ec-month-view {
     margin-top: 10px;
 }
 
+/*Title length*/
+.title_length_one h4{
+    min-height: 26px;
+}
+.title_length_two h4{
+    min-height: 52px;
+}
+.title_length_three h4{
+    min-height: 78px;
+}
+.title_length_four h4{
+    min-height: 103px;
+}
+/*Title length ends here*/
