--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -972,7 +972,7 @@ footer .mkd-footer-top-holder {
     font-size: 13px !important;
 }
 .single-post .mkd-comment-holder {
-    margin-top: 50px;
+    margin-top: 10px;
 }
 /*Title color*/
 aside.mkd-sidebar .mkd-section-title-holder .mkd-st-title, .wpb_widgetised_column .mkd-section-title-holder .mkd-st-title{
@@ -1244,3 +1244,14 @@ table.ai1ec-month-view {
     min-height: 103px;
 }
 /*Title length ends here*/
+/*Monitor comment style starts here*/
+.monitorcomments > p {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: normal;
+    margin-top: 50px;
+}
+.monitorcomments a {
+    text-decoration: underline;
+}
+/*Monitor comment style ends here*/
