Added a commenting link that appearing now just above the 'Comments' title on the video single page

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -1254,4 +1254,7 @@ table.ai1ec-month-view {
 .monitorcomments a {
     text-decoration: underline;
 }
+.fsp-recommended-stories-cont #comments {
+    margin-top: 0px;
+}
 /*Monitor comment style ends here*/
