Created the comment guidelines as block instead of multiple part

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -1257,4 +1257,7 @@ table.ai1ec-month-view {
 .fsp-recommended-stories-cont #comments {
     margin-top: 0px;
 }
+.mkd-column-inner #comments {
+    margin-top: 0px;
+}
 /*Monitor comment style ends here*/
