Added styles for trending news

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -1276,3 +1276,11 @@ table.ai1ec-month-view {
     font-size: 18px;
 }
 /*popup inner pages ends here*/
+@media only screen and (max-width: 768px) {
+ .trending-news-blk .mkd-bn-title {
+    margin: 0px 0 0 !important;
+}   
+ .trending-news-blk ul.mkd-bn-slide {
+    margin: 8px 0 10px !important;
+}
+}
