--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -617,6 +617,23 @@ footer .mkd-footer-top-holder {
     color:red;
     font-size: 13px;
 }
+@media only screen and (max-width: 640px) {
+    .join-content {
+        padding: 0 0 0 7% !important;
+    }
+    .sign-up-text{
+        padding:15% 0 0 !important;
+        font-size: 2.5em !important;
+    }
+    .fsborderradius .fsBody .fsForm{
+        width: 100% !important;
+    }
+    .fsSubmit input.fsSubmitButton{
+        margin-left: 0% !important;
+        width: 50% !important;
+    }
+}
+
 /*Login css ends here*/
 
 /*find-a-branch-container popup css starts here*/
