Added styles for register page desktop view

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -617,6 +617,9 @@ footer .mkd-footer-top-holder {
     color:red;
     font-size: 13px;
 }
+.fsborderradius .fsBody .fsForm{
+        width: 90% !important;
+    }
 @media only screen and (max-width: 640px) {
     .join-content {
         padding: 0 0 0 7% !important;
