--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -541,6 +541,7 @@ footer .mkd-footer-top-holder {
 .login-container h3{
     font-size: 20px;
     padding-bottom: 5px;
+    padding-top: 5px;
 }
 .login-container ul li{
     list-style: none;
