Changed login from header tracking

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -542,6 +542,7 @@ footer .mkd-footer-top-holder {
     font-size: 20px;
     padding-bottom: 5px;
     padding-top: 5px;
+    letter-spacing: .02em;
 }
 .login-container ul li{
     list-style: none;
