Hide Comments section in mainsite and saved stories padding

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -1385,3 +1385,10 @@ table.ai1ec-month-view {
         font-weight: bold;
 }
 /*contact us styles ends here*/
+
+/*padding space for saved stories starts here*/
+.fa-star-rightpad
+{
+    padding-right:7px;
+}
+/*padding space for saved stories ends here*/
