Fixed tile bar height issue for village site and contact us style update

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -1365,12 +1365,15 @@ table.ai1ec-month-view {
         margin-top: 13px;
         min-height: 44px;
     }
+    .mkd-pt-six-item .mkd-post-excerpt {
+        min-height: 44px;
+    }
 }
 /*For set out minimum height blog box if description not exist ends*/
 
 /*footer block for ipad starts here*/
 @media only screen and (max-width: 780px) and (min-width: 768px){
-   footer .mkd-footer-top-holder .mkd-four-columns .mkd-column{
+    footer .mkd-footer-top-holder .mkd-four-columns .mkd-column{
         width: 50% !important;
         float: left !important;
     }
@@ -1382,8 +1385,10 @@ table.ai1ec-month-view {
     background: #ffffff;
 }
 .wpb-cont-cust-style a{
-        font-weight: bold;
+    font-weight: bold;
+    color:#f99d3e;
 }
+
 /*contact us styles ends here*/
 
 /*padding space for saved stories starts here*/
