updated tile height for village site

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -1386,9 +1386,8 @@ table.ai1ec-month-view {
 }
 .wpb-cont-cust-style a{
     font-weight: bold;
-    color:#f99d3e;
+    color: #ff6600;
 }
-
 /*contact us styles ends here*/
 
 /*padding space for saved stories starts here*/
