--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -371,6 +371,26 @@ Category menu right side css ends here*/
         margin-left: 5px;
     }
 }
+.mkd-mobile-search-nw {
+    padding:15px;
+    overflow: hidden;
+}
+.mkd-mobile-search-nw .mkd-column-left input{
+    width:75%;
+    float: left;
+    padding: 0 2%;
+    height: 36px;
+}
+.mkd-mobile-search-nw .mkd-column-right input{
+    background: #b3cc36;
+    border: 0 none;
+    color: #ffffff;
+    float: right;
+    font-size: 18px;
+    height: 38px;
+    letter-spacing: 2px;
+    width: 19%;
+}
 /*header css ends here*/
 
 /*footer css starts here*/
@@ -627,6 +647,16 @@ footer .mkd-footer-top-holder {
 .fsborderradius .fsBody .fsForm{
     width: 90% !important;
 }
+@media only screen and (max-width: 1024px) {
+    .fsForm .fsLabelHorizontal > label, .fsForm .fsLabelHorizontal > legend, .fsForm .fsLabelHorizontal > span.fsLabel, .fsForm .fsLabelHorizontal legend.fsLabelHorizontal{
+        padding-bottom: 10px !important;
+        text-align:left !important;
+        width:100% !important;
+    }
+    .fsForm .fsLabelHorizontal .fsLabel + .fieldset-content, .fsForm .fsLabelHorizontal .fsLabel + .fsFieldHorizontal{
+        width:100% !important;
+    }
+}
 @media only screen and (max-width: 640px) {
     .join-content {
         padding: 0 0 0 7% !important;
@@ -641,14 +671,6 @@ footer .mkd-footer-top-holder {
     .fsSubmit input.fsSubmitButton{
         margin-left: 0% !important;
         width: 50% !important;
-    }
-    .fsForm .fsLabelHorizontal > label, .fsForm .fsLabelHorizontal > legend, .fsForm .fsLabelHorizontal > span.fsLabel, .fsForm .fsLabelHorizontal legend.fsLabelHorizontal{
-        padding-bottom: 10px !important;
-        text-align:left !important;
-        width:100% !important;
-    }
-    .fsForm .fsLabelHorizontal .fsLabel + .fieldset-content, .fsForm .fsLabelHorizontal .fsLabel + .fsFieldHorizontal{
-        width:100% !important;
     }
 }
 
@@ -1371,7 +1393,7 @@ table.ai1ec-month-view {
 }
 @media only screen and (min-width: 1441px){
     .mkd-pt-six-item .mkd-pt-six-image-holder {
-         min-height: 240px;
+        min-height: 240px;
     }
 }
 /*For set out minimum height blog box if description not exist ends*/
