Completed the coach role implementation and coach user public page

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -1473,4 +1473,6 @@ table.ai1ec-month-view {
     }
 }
 /*reply command section ends here*/
-
+.mkd-author-description .mkd-author-text p{
+margin: 7px 0 0;
+}
