Added new field called title while create new coach user from admin

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -1530,5 +1530,8 @@ table.ai1ec-month-view {
     float: none;
     width: 100%;
 }
+.article-cr-cont{
+    padding-top: 20px;
+}
 }
 /*article created section ends here*/
