Changed background color

--- a/wp-content/themes/discussionwp-child/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp-child/assets/css/fspstyles.css
@@ -1541,7 +1541,7 @@ table.ai1ec-month-view {
 
 /*Sponsored Content Styles*/
 .sponsored-post-bar {
-    background-color: #b3cc36;
+    background-color: #c9739c;
     border-right: #f99d3e 5px solid;
     box-sizing: border-box;
     position:absolute;
